--- a/backend/apigateway-service/Jenkinsfile
+++ b/backend/apigateway-service/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
         CHECK_SERVER = 'k11d101.p.ssafy.io'
         PROJECT_ROOT = '/home/ubuntu'
         SERVICE_NAME = 'apigateway-service'
+        SERVICE_DIR = "backend/${SERVICE_NAME}"
         IMAGE_NAME = "yechanissm2/${SERVICE_NAME}"
     }
 
@@ -19,36 +20,51 @@ pipeline {
             }
         }
 
-//         stage('Wait for Config and Discovery Services') {
-//             steps {
-//                 script {
-//                     def isConfigRunning = false
-//                     def isDiscoveryRunning = false
-//
-//                     for (int i = 0; i < 5; i++) {
-//                         isConfigRunning = sh(script: "curl -s http://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
-//                         isDiscoveryRunning = sh(script: "curl -s http://${CHECK_SERVER}:8761/actuator/health | grep 'UP'", returnStatus: true) == 0
-//                         if (isConfigRunning && isDiscoveryRunning) break
-//                         sleep 10
-//                     }
-//                     if (!isConfigRunning) error "Config Service is not ready."
-//                     if (!isDiscoveryRunning) error "Discovery Service is not ready."
-//                 }
-//             }
-//         }
+        stage('Check for Changes') {
+            steps {
+                script {
+                    // origin/backend/develop 브랜치를 가져옵니다.
+                    sh "git fetch origin backend/develop"
 
-        stage('Copy Secret File') {
-                    steps {
-                        withCredentials([file(credentialsId: 'application-secret-yml', variable: 'APPLICATION_YML')]) {
-                            sh """
-                                mkdir -p backend/${SERVICE_NAME}/src/main/resources
-                                cp ${APPLICATION_YML} backend/${SERVICE_NAME}/src/main/resources/application-secret.yml
-                            """
+                    // origin/backend/develop과 현재 HEAD 간의 변경된 파일 목록을 가져옵니다.
+                    def changeOutput = sh(script: "git diff --name-only origin/backend/develop...HEAD", returnStdout: true).trim()
+                    echo "Changed files:\n${changeOutput}"
+
+                    // 변경된 서비스 디렉토리가 있는지 확인합니다.
+                    def buildRequired = false
+                    for (file in changeOutput.split("\n")) {
+                        if (file.startsWith("${SERVICE_DIR}/")) {
+                            buildRequired = true
+                            echo "Changes detected in ${SERVICE_NAME}. Proceeding with build."
+                            break
                         }
                     }
+
+                    // 결과를 환경 변수로 설정합니다.
+                    env.BUILD_REQUIRED = buildRequired.toString()
+                    echo "BUILD_REQUIRED: ${env.BUILD_REQUIRED}"
                 }
+            }
+        }
+
+        stage('Copy Secret File') {
+            when {
+                expression { return env.BUILD_REQUIRED == 'true' }
+            }
+            steps {
+                withCredentials([file(credentialsId: 'application-secret-yml', variable: 'APPLICATION_YML')]) {
+                    sh """
+                        mkdir -p backend/${SERVICE_NAME}/src/main/resources
+                        cp ${APPLICATION_YML} backend/${SERVICE_NAME}/src/main/resources/application-secret.yml
+                    """
+                }
+            }
+        }
 
         stage('Build Docker Image') {
+            when {
+                expression { return env.BUILD_REQUIRED == 'true' }
+            }
             steps {
                 script {
                     docker.build("${env.IMAGE_NAME}:latest", "--no-cache -f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
@@ -57,6 +73,9 @@ pipeline {
         }
 
         stage('Push to DockerHub') {
+            when {
+                expression { return env.BUILD_REQUIRED == 'true' }
+            }
             steps {
                 script {
                     docker.withRegistry('https://registry.hub.docker.com', env.DOCKERHUB_CREDENTIALS) {
@@ -67,6 +86,9 @@ pipeline {
         }
 
         stage('Deploy to Server') {
+            when {
+                expression { return env.BUILD_REQUIRED == 'true' }
+            }
             steps {
                 sshagent([env.DEPLOY_SERVER_CREDENTIALS]) {
                     sh """
@@ -86,10 +108,16 @@ pipeline {
 
     post {
         success {
-            mattermostSend(color: 'good', message: "API Gateway 배포 성공.")
+            if (env.BUILD_REQUIRED == 'true') {
+                mattermostSend(color: 'good', message: "API Gateway 배포 성공.")
+            } else {
+                echo "API Gateway 변경 사항 없음. 빌드 및 배포를 건너뜁니다."
+            }
         }
         failure {
-            mattermostSend(color: 'danger', message: "API Gateway 배포 실패. 수동 확인이 필요합니다.")
+            if (env.BUILD_REQUIRED == 'true') {
+                mattermostSend(color: 'danger', message: "API Gateway 배포 실패. 수동 확인이 필요합니다.")
+            }
         }
     }
 }
