--- a/backend/user-service/Jenkinsfile
+++ b/backend/user-service/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline {
         CHECK_SERVER = 'k11d101.p.ssafy.io'
         PROJECT_ROOT = '/home/ubuntu'
         SERVICE_NAME = 'user-service'
+        SERVICE_DIR = "backend/${SERVICE_NAME}"
         IMAGE_NAME = "yechanissm2/${SERVICE_NAME}"
     }
 
@@ -19,21 +20,30 @@ pipeline {
             }
         }
 
-//         stage('Wait for Config Service') {
-//             steps {
-//                 script {
-//                     def isConfigRunning = false
-//                     for (int i = 0; i < 5; i++) {
-//                         isConfigRunning = sh(script: "curl -s http://${CHECK_SERVER}:8888/actuator/health | grep 'UP'", returnStatus: true) == 0
-//                         if (isConfigRunning) break
-//                         sleep 10
-//                     }
-//                     if (!isConfigRunning) error "Config Service is not ready."
-//                 }
-//             }
-//         }
+        stage('Check for Changes') {
+            steps {
+                script {
+                    sh "git fetch origin backend/develop"
+                    def changeOutput = sh(script: "git diff --name-only origin/backend/develop...HEAD", returnStdout: true).trim()
+                    echo "Changed files:\n${changeOutput}"
+                    def buildRequired = false
+                    for (file in changeOutput.split("\n")) {
+                        if (file.startsWith("${SERVICE_DIR}/")) {
+                            buildRequired = true
+                            echo "Changes detected in ${SERVICE_NAME}. Proceeding with build."
+                            break
+                        }
+                    }
+                    env.BUILD_REQUIRED = buildRequired.toString()
+                    echo "BUILD_REQUIRED: ${env.BUILD_REQUIRED}"
+                }
+            }
+        }
 
         stage('Build Docker Image') {
+            when {
+                expression { return env.BUILD_REQUIRED == 'true' }
+            }
             steps {
                 script {
                     docker.build("${env.IMAGE_NAME}:latest", "--no-cache -f backend/${SERVICE_NAME}/Dockerfile backend/${SERVICE_NAME}")
@@ -42,6 +52,9 @@ pipeline {
         }
 
         stage('Push to DockerHub') {
+            when {
+                expression { return env.BUILD_REQUIRED == 'true' }
+            }
             steps {
                 script {
                     docker.withRegistry('https://registry.hub.docker.com', env.DOCKERHUB_CREDENTIALS) {
@@ -52,6 +65,9 @@ pipeline {
         }
 
         stage('Deploy to Server') {
+            when {
+                expression { return env.BUILD_REQUIRED == 'true' }
+            }
             steps {
                 sshagent([env.DEPLOY_SERVER_CREDENTIALS]) {
                     sh """
@@ -71,10 +87,16 @@ pipeline {
 
     post {
         success {
-            mattermostSend(color: 'good', message: "user Service 배포 성공.")
+            if (env.BUILD_REQUIRED == 'true') {
+                mattermostSend(color: 'good', message: "User Service 배포 성공.")
+            } else {
+                echo "User Service 변경 사항 없음. 빌드 및 배포를 건너뜁니다."
+            }
         }
         failure {
-            mattermostSend(color: 'danger', message: "user Service 배포 실패. 수동 확인이 필요합니다.")
+            if (env.BUILD_REQUIRED == 'true') {
+                mattermostSend(color: 'danger', message: "User Service 배포 실패. 수동 확인이 필요합니다.")
+            }
         }
     }
 }
